# partymode

./: Cargo.toml  LICENSE  README.md  partymode.service
src/: cli.rs  config.rs  daemon.rs  dbus.rs  lib.rs  main.rs  socket.rs
