[package]
name = "partymode"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", default-features = false, features = [
    "std",
    "cargo",
    "help",
] }
logind-dbus = "0.1.1"
mpris = "2.0.1"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = "0.3.17"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
toml = "0.8.21"
