[package]
name = "partymode"
version = "0.2.1"
edition = "2024"
description = "Keeps your system awake while playing media"
license = "AGPL-3.0"
repository = "https://github.com/peppidesu/partymode"
authors = ["Pepijn Bakker"]
keywords = ["idle", "inhibit", "media", "mpd", "suspend", "mpris"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.37", default-features = false, features = [
    "std",
    "cargo",
    "help",
    "usage",
] }
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = "0.3.17"
thiserror = "2.0.12"
tokio = { version = "1.34.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
toml = "0.8.21"
zbus = { version = "5.6.0", default-features = false, features = ["async-io"] }
